--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
             <label for="score"></label>
             <input type="text" name="score" id="score" placeholder="Your score" required />
           </div>
-          <button type="submit" class="btn submit-btn">Submit</button>
+          <button type="submit" class="btn submit-btn"><span>Submit</span></button>
         </form>  
       </div>
     </div>
