--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
           </div>
           <div class="score">
             <label for="score"></label>
-            <input type="text" name="score" id="score" placeholder="Your score" required />
+            <input type="number" name="score" id="score" placeholder="Your score" required />
           </div>
           <button type="submit" class="btn submit-btn"><span>Submit</span></button>
         </form>  
